<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.intersections.ibis</groupId>
    <artifactId>ibis-root</artifactId>
    <packaging>pom</packaging>
    <version>1.2.0-SNAPSHOT</version>
    <name>IBIS-ROOT</name>

    <modules>
        <module>Common</module>
        <module>Analytics</module>
        <module>Capture</module>
        <module>DataBridge</module>
        <module>Services</module>
        <module>Tools</module>
        <module>smr</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:dorelmatei/DataLS.git</connection>
        <developerConnection>scm:git:git@github.com:ThreePillarGlobal/IBIS.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <properties>

        <java.version>1.7</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <repository.server>http://192.168.1.39:8081</repository.server>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <hibernate.version>4.1.7.Final</hibernate.version>
        <slf4j.version>1.7.2</slf4j.version>
        <shiro.version>1.2.1</shiro.version>
        <skip.assembly>true</skip.assembly>
        <assembly.plugin.version>2.3</assembly.plugin.version>
        <common.dir>common</common.dir>

    </properties>

    <repositories>
        <repository>
            <id>JBossRepo</id>
            <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>ibis-releases</id>
            <url>${repository.server}/nexus/content/repositories/IBIS-Releases</url>
        </repository>
        <snapshotRepository>
            <id>ibis-snapshots</id>
            <url>${repository.server}/nexus/content/repositories/IBIS-Snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <!-- Building and appending the props of the corresponding Profile -->
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources/${common.dir}</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*</include>
                    <include>**/*</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/resources/${env}</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*</include>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <pushChanges>false</pushChanges>
                    <remoteTagging>false</remoteTagging>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.3</version>
                <configuration>
                    <!--<forkMode>never</forkMode>-->
                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jvnet.maven.incrementalbuild</groupId>
                <artifactId>incremental-build-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>incremental-build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>


        <!--Add here the configurations for all plugins that will be used throughout the children modules-->
        <pluginManagement>
            <plugins>

                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.jvnet.maven.incrementalbuild
                                        </groupId>
                                        <artifactId>
                                            incremental-build-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.3,)
                                        </versionRange>
                                        <goals>
                                            <goal>
                                                incremental-build
                                            </goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>

                <!--Copy resources plugin, used by the server-like componentes-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>copy-dependencies</id>
                            <phase>package</phase>
                            <goals>
                                <goal>copy-dependencies</goal>
                            </goals>
                            <configuration>
                                <includeScope>runtime</includeScope>
                                <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                <overWriteReleases>false</overWriteReleases>
                                <overWriteSnapshots>false</overWriteSnapshots>
                                <overWriteIfNewer>true</overWriteIfNewer>
                            </configuration>
                        </execution>
                        <execution>
                            <id>unpack-dependencies</id>
                            <phase>package</phase>
                            <goals>
                                <goal>unpack-dependencies</goal>
                            </goals>
                            <configuration>
                                <includeGroupIds>com.intersections.ibis</includeGroupIds>
                                <includeScope>runtime</includeScope>
                                <includes>*.properties, *.json</includes>
                                <excludes>log4j.properties</excludes>
                                <outputDirectory>${project.build.directory}/dependency-config</outputDirectory>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <!--Eases the licenses management task-->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>1.3</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>add-third-party</goal>
                                <goal>aggregate-add-third-party</goal>
                                <!--<goal>update-project-license</goal>-->
                            </goals>
                            <configuration>
                                <licenseMerges>
                                    <licenseMerge>The Apache Software License, Version 2.0|Apache License,
                                        Version 2.0|ASF 2.0|Apache 2.0|Apache 2|Apache License Version 2.0
                                    </licenseMerge>
                                    <licenseMerge>
                                        The BSD License|BSD style|BSD-style license|BSD|BSD License
                                    </licenseMerge>
                                </licenseMerges>
                                <outputDirectory>${project.basedir}/license</outputDirectory>
                                <thirdPartyFilename>license.txt</thirdPartyFilename>
                                <!--<keepBackup>true</keepBackup>-->
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <!--Build number plugin-->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.1</version>
                    <configuration>
                        <timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>create</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!--Assembly plugin (uses deploy.xml from specific module). Used by stand-alone components.-->
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${assembly.plugin.version}</version>
                    <configuration>
                        <skipAssembly>${skip.assembly}</skipAssembly>
                        <descriptors>
                            <descriptor>src/main/assembly/deploy.xml</descriptor>
                        </descriptors>
                        <appendAssemblyId>false</appendAssemblyId>
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>


            </plugins>
        </pluginManagement>
    </build>

    <!-- Profiles -->
    <profiles>

        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <env>dev</env>
                <skipIntegrationTests>true</skipIntegrationTests>
                <skip.assembly>true</skip.assembly>
            </properties>
        </profile>

        <profile>
            <id>dev</id>
            <properties>
                <env>dev</env>
                <skipIntegrationTests>true</skipIntegrationTests>
            </properties>
        </profile>

        <profile>
            <id>dev-IT</id>
            <properties>
                <env>dev</env>
                <skipIntegrationTests>false</skipIntegrationTests>
            </properties>
        </profile>

        <profile>
            <id>dev-package</id>
            <properties>
                <env>dev</env>
                <skipIntegrationTests>true</skipIntegrationTests>
                <skip.assembly>false</skip.assembly>
            </properties>
        </profile>

        <profile>
            <id>staging</id>
            <properties>
                <env>staging</env>
                <skipIntegrationTests>true</skipIntegrationTests>
                <skip.assembly>false</skip.assembly>
            </properties>
        </profile>

        <profile>
            <id>prod</id>
            <properties>
                <env>prod</env>
                <skipIntegrationTests>false</skipIntegrationTests>
                <skip.assembly>false</skip.assembly>
            </properties>
        </profile>

        <profile>
            <id>license</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                    </plugin>
                    <!--Skip tests-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <skipIntegrationTests>true</skipIntegrationTests>
                <skip.assembly>true</skip.assembly>
            </properties>
        </profile>
        <profile>
            <id>javadoc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>
